# SaleaeSDIOAnalyzer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_analyzer.py  license.txt  rename_analyzer.py
.github/workflows/: build.yml
Visual Studio/: SDIOAnalyzer.sln  SDIOAnalyzer.vcxproj  SimpleSerialAnalyzer.vcxproj
cmake/: ExternalAnalyzerSDK.cmake
samples/: sample-data.sal
source/: SDIOAnalyzer.cpp  SDIOAnalyzer.h  SDIOAnalyzerResults.cpp  SDIOAnalyzerResults.h  SDIOAnalyzerSettings.cpp  SDIOAnalyzerSettings.h  SDIOSimulationDataGenerator.cpp  SDIOSimulationDataGenerator.h
src/: SDIOAnalyzer.cpp  SDIOAnalyzer.h  SDIOAnalyzerResults.cpp  SDIOAnalyzerResults.h  SDIOAnalyzerSettings.cpp  SDIOAnalyzerSettings.h  SDIOSimulationDataGenerator.cpp  SDIOSimulationDataGenerator.h
